--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,3 +1,10 @@
 body{
     background-color: #E4E7EC !important;
 }
+.selectCustom > div{
+    z-index: 5;
+    border-color: #e2e8f1 !important;
+}
+.selectCustom > div div>div{
+    background-color: ;
+}
