--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,10 +1,11 @@
 body{
-    background-color: #E4E7EC !important;
+    background-color: #fbfafc !important;
+    /* font-family: 'Oxygen', sans-serif !important; */
 }
 .selectCustom > div{
     z-index: 5;
     border-color: #e2e8f1 !important;
 }
-.selectCustom > div div>div{
-    background-color: ;
+.logo{
+    font-family: 'Oxygen', sans-serif !important;
 }
