--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -9,3 +9,42 @@ body{
 .logo{
     font-family: 'Oxygen', sans-serif !important;
 }
+.ribbon{
+    font-size:20px;
+    position:relative;
+    display:inline-block;
+    margin:5em;
+    text-align:center;
+    position: absolute;
+    margin: 0;
+    top: 153px;
+    left: -9.5px;
+    z-index: 10;
+  }
+  .text{
+    display:inline-block;
+    padding:0.5em 1em;
+    min-width:20em;
+    line-height:1.2em;
+    background: #FFD72A;
+    position:relative;
+    box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.3);
+    /* clip-path: polygon(100% 0%, 95% 50%, 100% 100%, 0 100%, 0% 50%, 0 0); */
+  }
+  .text:before{
+    content:'';
+    position:absolute;
+    border-style:solid;
+  }
+  .text:before{
+    bottom:100%; left:0;
+    border-width: .5em .7em 0 0;
+    border-color: transparent #FC9544 transparent transparent;
+  }
+  .bold:before{
+    top:0.5em;right:-2em;
+    border-width: 1.1em 1em 1.1em 3em;
+    border-color: #FECC30 transparent #FECC30 #FECC30;
+    z-index:-1;
+  }
+  
